--- a/resources.qrc
+++ b/resources.qrc
@@ -1,8 +1,8 @@
 <RCC>
-    <qresource prefix="/dockablemirrormap" >
-        <file alias="pluginicon" >icons/dockablemirrormap.png</file>
-        <file alias="plus" >icons/plus.png</file>
-        <file alias="minus" >icons/minus.png</file>
+    <qresource prefix="/">
+        <file>icons/dockablemirrormap.png</file>
+        <file>icons/plus.png</file>
+        <file>icons/minus.png</file>
         <file>icons/faunalia_logo.png</file>
     </qresource>
 </RCC>
