add '?' about icon

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,6 +3,7 @@
         <file>icons/dockablemirrormap.png</file>
         <file>icons/plus.png</file>
         <file>icons/minus.png</file>
+        <file>icons/about.png</file>
     </qresource>
     <qresource prefix="/faunalia">
         <file alias="logo">icons/faunalia_logo.png</file>
